# 04-cnc-toolpath-studio

./: README.md  index.html  package-lock.json  package.json
src/: App.tsx  ipc.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/gcode/: interpolator.rs  lexer.rs  mod.rs  parser.rs
src-tauri/src/kinematics/: mod.rs
src-tauri/src/memory/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/mrr/: mod.rs
src/components/: MrrChart.tsx  ToolConfigPanel.tsx
src/data/: ToolpathBuffer.ts
src/engine/: MachineModel.ts  MaterialRemoval.ts  RenderEngine.ts
src/workers/: simulationWorker.ts
