[package]
name = "cnc-toolpath-studio"
version = "0.1.0"
description = "CNC Toolpath Studio - 五轴数控机床刀轨解析与仿真"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memmap2 = "0.9"
byteorder = "1.5"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
nalgebra = { version = "0.32", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
